--- a/GameCLGT/Areas/Admin/Views/Categories/Create.cshtml
+++ b/GameCLGT/Areas/Admin/Views/Categories/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model GameCLGT.Areas.Admin.Models.Category
+﻿@model CLGTgame.Areas.Admin.Models.Category
 
 @{
     ViewBag.Title = "Create";
@@ -6,8 +6,7 @@
 
 <h2>Create</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Categories", FormMethod.Post, new { enctype = "multipart/form-data"}))
 {
     @Html.AntiForgeryToken()
     
@@ -22,15 +21,13 @@
                 @Html.ValidationMessageFor(model => model.Category_name, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.Category_image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Category_image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Category_image, "", new { @class = "text-danger" })
+                <input type="file" value="Browse" name="file" id="file"/>
             </div>
         </div>
-
+  
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -39,10 +36,6 @@
     </div>
 }
 
-<div>
+<div class="btn btn-default">
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
