--- a/GameCLGT/Areas/Admin/Views/Categories/Delete.cshtml
+++ b/GameCLGT/Areas/Admin/Views/Categories/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GameCLGT.Areas.Admin.Models.Category
+﻿@model CLGTgame.Areas.Admin.Models.Category
 
 @{
     ViewBag.Title = "Delete";
@@ -24,7 +24,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Category_image)
+            <img src="@Html.DisplayFor(model => model.Category_image)" width="30"/>
         </dd>
 
         <dt>
@@ -41,8 +41,10 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" /> 
+            <button class="btn btn-default">
+                @Html.ActionLink("Back to List", "Index")
+            </button>
         </div>
     }
 </div>
