--- a/GameCLGT/Areas/Admin/Views/Types/Details.cshtml
+++ b/GameCLGT/Areas/Admin/Views/Types/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model GameCLGT.Areas.Admin.Models.Type
+﻿@model CLGTgame.Areas.Admin.Models.Type
 
 @{
     ViewBag.Title = "Details";
@@ -23,7 +23,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Type_image)
+            <img src="@Html.DisplayFor(model => model.Type_image)" width="30"/>
         </dd>
 
         <dt>
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    <div class="btn btn-default">@Html.ActionLink("Edit", "Edit", new { id = Model.ID })</div>
+    <div class="btn btn-default">@Html.ActionLink("Back to List", "Index")</div>
 </p>
