--- a/GameCLGT/Areas/Admin/Views/Types/Edit.cshtml
+++ b/GameCLGT/Areas/Admin/Views/Types/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model GameCLGT.Areas.Admin.Models.Type
+﻿@model CLGTgame.Areas.Admin.Models.Type
 
 @{
     ViewBag.Title = "Edit";
@@ -6,8 +6,7 @@
 
 <h2>Edit</h2>
 
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Types", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -28,8 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Type_image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Type_image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Type_image, "", new { @class = "text-danger" })
+                <input type="file" value="Browse" name="file" id="file" />
             </div>
         </div>
 
@@ -41,10 +39,6 @@
     </div>
 }
 
-<div>
+<div class="btn btn-default">
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
