--- a/GameCLGT/Areas/Admin/Views/Categories/Index.cshtml
+++ b/GameCLGT/Areas/Admin/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CLGTgame.Areas.Admin.Models.Category>
+﻿@model IEnumerable<GameCLGT.Areas.Admin.Models.Category>
 
 @{
     ViewBag.Title = "Index";
